--- a/Index.html
+++ b/Index.html
@@ -634,7 +634,7 @@
             <h1 class="main-title">Long-Term Effects<br>of Loving Bhumuwuw</h1>
             <div class="department">
                 Published by the Department of
-                <span class="department-name">Inder App Mujhe Pyaar Nhi Krte</span>
+                <span class="department-name">Tujhme common sense nhi hai kya?</span>
             </div>
             <button class="begin-btn" onclick="nextSlide(2)">Begin Study 💕</button>
         </div>
